[gd_scene load_steps=3 format=3 uid="uid://cjn73a6x8r2wr"]

[ext_resource type="Script" path="res://game/entities/base_entity/health_module.gd" id="1_ljgxy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jqxlh"]
radius = 9.0

[node name="HealthModule" type="Node2D"]
script = ExtResource("1_ljgxy")

[node name="HpRegenCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ShieldRegenCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="HitboxCollisionShape" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_jqxlh")

[connection signal="timeout" from="HpRegenCooldownTimer" to="." method="_on_hp_regen_cooldown_timer_timeout"]
[connection signal="timeout" from="ShieldRegenCooldownTimer" to="." method="_on_shield_regen_cooldown_timer_timeout"]
